# Quantized-SpikeNet

./: .gitignore  README.md  main.py  pyproject.toml  run_spinnaker.py
.github/workflows/: .ci.yml
SpiNNaker/: README.md  run_spinnaker.ipynb  spinnaker.cfg
configs/: cifar10.json  dvs_gesture.json  nepic_kitchens.json  nmnist.json
src/data_loaders/: __init__.py  cifar10_dvs_loader.py  dvs_gesture_loader.py  nepic_kitchens_loader.py  nmnist_loader.py
src/domain/: ports.py
src/engine/: __init__.py  builder.py  quantization.py  trainer.py  utils.py
src/models/: __init__.py  architectures.py  blocks.py  neurons.py  resnet.py  resnet_networks.py  simple.py  simple_networks.py  vgg.py  vgg_networks.py
src/tests/: test_checkpoint.py  test_gradient_flow.py  test_integration.py  test_main_pipeline.py  test_model.py  test_overfitting.py  test_quantization.py  test_snn_dynamics.py
